--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="splash-container">
         <div class="splash">
             <h1 class="splash-head">ShelfChefs</h1>
+            <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
             <p class="splash-subhead">
                 Let Us Help You Find Your Next Meal
             </p>
@@ -71,19 +72,10 @@
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
                         <i class="fa fa-check-square-o"></i>
-                        Create Pantry
+                        Create Pantry and Search Recipes
                     </h3>
                     <p>
-                        Save items you have at home into your online pantry.
-                    </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <h3 class="content-subhead">
-                        <i class="fa fa-th-large"></i>
-                        Search Recipes
-                    </h3>
-                    <p>
-                        Search our library of recipes based on the contents of your pantry. Filter recipes based on
+                        Save items you have at home into your online pantry. Search our library of recipes based on the contents of your pantry. Filter recipes based on
                         dietary restrictions.
                     </p>
                 </div>
@@ -95,6 +87,9 @@
                     <p>
                         Use ShelfChefs at home or on the go!
                     </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                    <image alt="food" src="/public/images/food.jpg"></image>
                 </div>
             </div>
         </div>
