--- a/pure-layout-marketing/index.html
+++ b/pure-layout-marketing/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
-    <title>ShelfChefs</title>
+    <title>ShelfChef</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -23,7 +23,7 @@
             <link rel="stylesheet" href="css/layouts/marketing-old-ie.css">
         <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="css/layouts/marketing.css">
+    <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
     <!--<![endif]-->
 </head>
 
