--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
-    <title>ShelfChefs</title>
+    <title>ShelfChef</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -23,19 +23,18 @@
             <link rel="stylesheet" href="css/layouts/marketing-old-ie.css">
         <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="css/layouts/marketing.css">
+    <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
     <!--<![endif]-->
 </head>
 
 <body>
 
     <div class="header">
-        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="">ShelfChefs</a>
-
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
+            <img width="50" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
+            <a class="pure-menu-heading" href="">ShelfChef</a>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Tour</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>
             </ul>
         </div>
@@ -43,7 +42,8 @@
 
     <div class="splash-container">
         <div class="splash">
-            <h1 class="splash-head">ShelfChefs</h1>
+            <h1 class="splash-head">ShelfChef</h1>
+            <img width="150" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
             <p class="splash-subhead">
                 Let Us Help You Find Your Next Meal
             </p>
@@ -55,7 +55,7 @@
 
     <div class="content-wrapper">
         <div class="content">
-            <h2 class="content-head is-center">Let ShelfChefs Help You Find Your Next Meal</h2>
+            <h2 class="content-head is-center">Let ShelfChef Help You Find Your Next Meal</h2>
 
             <div class="pure-g">
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -71,19 +71,10 @@
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
                         <i class="fa fa-check-square-o"></i>
-                        Create Pantry
+                        Create Pantry and Search Recipes
                     </h3>
                     <p>
-                        Save items you have at home into your online pantry.
-                    </p>
-                </div>
-                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <h3 class="content-subhead">
-                        <i class="fa fa-th-large"></i>
-                        Search Recipes
-                    </h3>
-                    <p>
-                        Search our library of recipes based on the contents of your pantry. Filter recipes based on
+                        Save items you have at home into your online pantry. Search our library of recipes based on the contents of your pantry. Filter recipes based on
                         dietary restrictions.
                     </p>
                 </div>
@@ -93,8 +84,11 @@
                         Easy To Use
                     </h3>
                     <p>
-                        Use ShelfChefs at home or on the go!
+                        Use ShelfChef at home or on the go!
                     </p>
+                </div>
+                <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+                    <image alt="food" src="/public/images/food.jpg"></image>
                 </div>
             </div>
         </div>
@@ -105,10 +99,10 @@
             </div>
             <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
-                <h2 class="content-head content-head-ribbon">ShelfChefs To The Rescue.</h2>
+                <h2 class="content-head content-head-ribbon">ShelfChef To The Rescue.</h2>
 
                 <p>
-                    Let ShelfChefs help you plan your next meal with the following easy steps. Create an account for
+                    Let ShelfChef help you plan your next meal with the following easy steps. Create an account for
                     free. Save items to your online pantry. Search recipes based on your pantry's contents and filter
                     based off dietary restrictions.
                 </p>
@@ -116,7 +110,7 @@
         </div>
 
         <div class="content">
-            <h2 class="content-head is-center">Sign Up For ShelfChefs Today.</h2>
+            <h2 class="content-head is-center">Sign Up For ShelfChef Today.</h2>
 
             <div class="pure-g">
                 <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
@@ -139,15 +133,15 @@
                 </div>
 
                 <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-                    <h4>Contact Us</h4>
+                    <a href="/contact.html" class="pure-button pure-button-primary">Contact Us</a>
                     <p>
-                        We at ShelfChefs want your recipe search to go as seamless as possible. Contact us with any
+                        We at ShelfChef want your recipe search to go as seamless as possible. Contact us with any
                         questions or comments you may have.
                     </p>
 
                     <h4>More Information</h4>
                     <p>
-                        ShelfChefs is here to help make your meal planning easier. Easily search for recipes based off
+                        ShelfChef is here to help make your meal planning easier. Easily search for recipes based off
                         items you already have in your kitchen.
                     </p>
                 </div>
@@ -156,7 +150,7 @@
         </div>
 
         <div class="footer l-box is-center">
-            ShelfChefs
+            ShelfChef
         </div>
 
     </div>
