--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body>
 
     <div class="header">
-        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
+            <img width="50" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
             <a class="pure-menu-heading" href="">ShelfChef</a>
-
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>
@@ -43,7 +43,7 @@
     <div class="splash-container">
         <div class="splash">
             <h1 class="splash-head">ShelfChef</h1>
-            <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
+            <img width="150" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
             <p class="splash-subhead">
                 Let Us Help You Find Your Next Meal
             </p>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-                    <h4>Contact Us</h4>
+                    <a href="/contact.html" class="pure-button pure-button-primary">Contact Us</a>
                     <p>
                         We at ShelfChef want your recipe search to go as seamless as possible. Contact us with any
                         questions or comments you may have.
