--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
-<!doctype <!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
 <body>
 
     <div class="header">
-        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset 1.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
@@ -29,42 +29,6 @@
         </div>
     </div>
 
-    <div class="content">
-        <h2 class="content-head is-center">Contact ShelfChef Today.</h2>
 
-        <div class="pure-g">
-            <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-                <form class="pure-form pure-form-stacked" action="https://formspree.io/shelfchef@gmail.com" method="POST">
-                    <fieldset>
-
-                        <label for="name">Your Name</label>
-                        <input id="name" type="text" placeholder="Your Name">
-
-
-                        <label for="email">Your Email</label>
-                        <input id="email" type="email" placeholder="Your Email">
-
-                        <label for="questions">Questions/Comments</label>
-                        <input id="questions" type="questions" placeholder="Questions">
-
-                        <button type="submit" class="pure-button">Submit</button>
-                    </fieldset>
-                </form>
-            </div>
-
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div class="footer l-box is-center">
-        ShelfChef
-    </div>
 
 </body>
-
-</html>
