--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
     <div class="splash-container">
         <div class="splash">
-            <h1 class="splash-head">ShelfChef</h1>
-            <img width="150" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
+            <img width="500" alt="File Icons" class="pure-img-responsive" src="/public/images/Logotop.png">
             <p class="splash-subhead">
                 Let Us Help You Find Your Next Meal
             </p>
@@ -77,14 +76,14 @@
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <image alt="food" src="/public/images/food.jpg"></image>
+                    <image alt="food" src="/public/images/food.png"></image>
                 </div>
             </div>
         </div>
 
         <div class="ribbon l-box-lrg pure-g">
             <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/logo.png">
+                <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/wrappedlogo.png">
             </div>
             <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
@@ -128,7 +127,7 @@
                         questions or comments you may have.
                     </p>
 
-                    <h4>More Information</h4>
+                    <a href="/about.html" class="pure-button pure-button-primary">About ShelfChef</a>
                     <p>
                         ShelfChef is here to help make your meal planning easier. Easily search for recipes based off
                         items you already have in your kitchen.
