--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ShelfChef is  here to help you plan your next meal.">
-    <title>ShelfChef</title>
+    <title>About ShelfChef</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -19,6 +19,11 @@
 
 <body>
 
+    <br>
+    <br>
+    <br>
+    <br>
+
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset 1.png">
@@ -29,8 +34,20 @@
         </div>
     </div>
 
-    <div class="footer l-box is-center">
-        ShelfChef
+    <div class="ribbon l-box-lrg pure-g">
+        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
+            <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/wrappedlogo.png">
+        </div>
+        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+
+            <h2 class="content-head content-head-ribbon">About ShelfChef</h2>
+
+            <p>
+                ShelfChef began as an idea for our second project of the University of Utah's Coding Bootcamp. 
+            </p>
+        </div>
     </div>
+
+    <div class="footer l-box is-center">ShelfChef</div>
 
 </body>
