--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ShelfChef is  here to help you plan your next meal.">
-    <title>ShelfChef</title>
+    <title>Contact ShelfChef</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-"
         crossorigin="anonymous">
@@ -61,9 +61,7 @@
     <br>
     <br>
 
-    <div class="footer l-box is-center">
-        ShelfChef
-    </div>
+    <div class="footer l-box is-center">ShelfChef</div>
 
 </body>
 
