--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
 
         </div>
 
-        <div class="footer l-box is-center">
-            ShelfChef
-        </div>
+        <div class="footer l-box is-center">ShelfChef</div>
 
     </div>
 
