--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ShelfChefs</title>
+    <title>Login to ShelfChef</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/public/styles/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
     <link rel="stylesheet" href="../Project1/assets/css/mainPage.css">
@@ -34,7 +34,7 @@
     <header id="masthead" class="bg-info">
         <nav class="navbar navbar-expand-lg navbar-dark bg-info">
 
-            <a class="navbar-brand" href="mainPage.html"><strong>ShelfChefs</strong></a>
+            <a class="navbar-brand" href="mainPage.html"><strong>ShelfChef</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,9 +75,7 @@
 
     <footer id="footer">
 
-        <p><strong>
-                Let ShelfChefs find a recipe for you.
-            </strong></p>
+        <p><strong>Let ShelfChefs find a recipe for you.</strong></p>
 
     </footer>
 
