--- a/about.html
+++ b/about.html
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <div class="footer l-box is-center">ShelfChef</div>
+    <div class="footer l-box is-center">Let ShelfChef find a recipe for you.</div>
 
 </body>
