--- a/login.html
+++ b/login.html
@@ -73,11 +73,7 @@
         <br>
     </div>
 
-    <footer id="footer">
-
-        <p><strong>Let ShelfChefs find a recipe for you.</strong></p>
-
-    </footer>
+    <div class="footer l-box is-center">Let ShelfChef find a recipe for you.</div>
 
 
     <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script>
