--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <br>
     <br>
 
-    <div class="footer l-box is-center">ShelfChef</div>
+    <div class="footer l-box is-center">Let ShelfChef find a recipe for you.</div>
 
 </body>
 
