--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             <p class="splash-subhead">
                 Let Us Help You Find Your Next Meal
             </p>
-            <p>
-                <a href="http://purecss.io" class="pure-button pure-button-primary">Get Started</a>
-            </p>
         </div>
     </div>
 
@@ -137,7 +134,7 @@
 
         </div>
 
-        <div class="footer l-box is-center">ShelfChef</div>
+        <div class="footer l-box is-center">Let ShelfChef find a recipe for you.</div>
 
     </div>
 
