changed backgroud, made changes to css

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
-   
+
 </head>
 
 <body>
 
     <div class="header">
-        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset 1.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
@@ -31,10 +31,12 @@
 
     <div class="splash-container">
         <div class="splash">
-            <img width="500" alt="File Icons" class="pure-img-responsive" src="/public/images/Logotop.png">
-            <p class="splash-subhead">
-                Let Us Help You Find Your Next Meal
-            </p>
+            <div class="blur">
+                <img width="500" alt="File Icons" class="pure-img-responsive" src="/public/images/Logotop.png">
+                <p class="splash-subhead">
+                    Let Us Help You Find Your Next Meal
+                </p>
+            </div>
         </div>
     </div>
 
@@ -59,7 +61,8 @@
                         Create Pantry and Search Recipes
                     </h3>
                     <p>
-                        Save items you have at home into your online pantry. Search our library of recipes based on the contents of your pantry. Filter recipes based on
+                        Save items you have at home into your online pantry. Search our library of recipes based on the
+                        contents of your pantry. Filter recipes based on
                         dietary restrictions.
                     </p>
                 </div>
