--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
-    
+
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <br>
 
     <div class="header">
-        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">  
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset 1.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
@@ -43,8 +43,13 @@
             <h2 class="content-head content-head-ribbon">About ShelfChef</h2>
 
             <p>
-                ShelfChef began as an idea for our second project of the University of Utah's Coding Bootcamp. 
+                ShelfChef began as an idea for our second project for the University of Utah's Coding Bootcamp.
             </p>
+
+            <p> Cisco had this goal of designing a site where you could store items from your kitchen pantry online and
+                use that information to then search for recipes online. Marissa was just stoked that a group invited her
+                to join their team. To her, it was obvious that Joshua was on the team as she is always commenting on
+                his and Cisco's "bromance."</p>
         </div>
     </div>
 
