--- a/main.html
+++ b/main.html
@@ -29,6 +29,30 @@
         </div>
     </div>
 
+    <br>
+    <br>
+    <br>
+
+    <!-- Pantry Input, Recipe Search -->
+    <div class="pure-g">
+        <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
+            <form class="pure-form pure-form-stacked">
+                <fieldset>
+
+                    <label for="save">Save Items to Pantry</label>
+                    <input id="save" type="text" placeholder="Save Items to Pantry">
+
+                    <button type="save" class="pure-button">Save to Pantry</button>
+
+                    <label for="search">Search Recipes</label>
+                    <input id="search" type="text" placeholder="Search Recipes">
+
+                    <button type="search" class="pure-button">Search Recipes</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
     <div class="footer l-box is-center">
         ShelfChef
     </div>
