--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login to ShelfChef</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/public/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
     <link rel="stylesheet" href="../Project1/assets/css/mainPage.css">
 </head>
