updated login link at top

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset 1.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>
+                <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li>
             </ul>
         </div>
     </div>
@@ -105,8 +105,8 @@
                     <form class="pure-form pure-form-stacked">
                         <fieldset>
 
-                            <label for="name">Your Name</label>
-                            <input id="name" type="text" placeholder="Your Name">
+                            <!-- <label for="name">Your Name</label> -->
+                            <!-- <input id="name" type="text" placeholder="Your Name"> -->
 
 
                             <label for="email">Your Email</label>
@@ -115,7 +115,11 @@
                             <label for="password">Your Password</label>
                             <input id="password" type="password" placeholder="Your Password">
 
-                            <button type="submit" class="pure-button">Sign Up</button>
+                            <a href=#login>
+                                <button id="login" type="submit" class="pure-button">Login</button>
+                            </a>
+                            or
+                            <button id="create" type="submit" class="pure-button">Create an account</button>
                         </fieldset>
                     </form>
                 </div>
