--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
 
     <div class="footer l-box is-center">Let ShelfChef find a recipe for you.</div>
 
-
+    <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-database.js"></script>
