--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
+    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/public/pure-layout-marketing/css/layouts/marketing.css">"
 
 </head>
 
@@ -21,8 +21,7 @@
 
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/images/Asset 1.png">
-            <ul class="pure-menu-list">
+            <img width="200" alt="ShelfChef" class="pure-img-responsive" src="/public/images/Asset.png" ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li>
             </ul>
@@ -32,7 +31,7 @@
     <div class="splash-container">
         <div class="splash">
             <div class="blur">
-                <img width="500" alt="File Icons" class="pure-img-responsive" src="/images/Logotop.png">
+                <img width="500" alt="File Icons" class="pure-img-responsive" src="/public/images/Logotop.png">
                 <p class="splash-subhead">
                     Let Us Help You Find Your Next Meal
                 </p>
@@ -76,14 +75,14 @@
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-                    <image alt="food" src="/images/food.png"></image>
+                    <image alt="food" src="/public/images/food.png"></image>
                 </div>
             </div>
         </div>
 
         <div class="ribbon l-box-lrg pure-g">
             <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                <img width="300" alt="File Icons" class="pure-img-responsive" src="/images/wrappedlogo.png">
+                <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/wrappedlogo.png">
             </div>
             <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
@@ -104,10 +103,6 @@
                 <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
                     <form class="pure-form pure-form-stacked">
                         <fieldset>
-
-                            <!-- <label for="name">Your Name</label> -->
-                            <!-- <input id="name" type="text" placeholder="Your Name"> -->
-
 
                             <label for="email">Your Email</label>
                             <input id="email" type="email" placeholder="Your Email">
