--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/pure-layout-marketing/css/layouts/marketing.css">
+    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/public/pure-layout-marketing/css/layouts/marketing.css">
 
 </head>
 
@@ -26,17 +26,17 @@
 
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/images/Asset 1.png">
+            <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>
+                <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li>
             </ul>
         </div>
     </div>
 
     <div class="ribbon l-box-lrg pure-g">
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-            <img width="300" alt="File Icons" class="pure-img-responsive" src="/images/wrappedlogo.png">
+            <img width="300" alt="File Icons" class="pure-img-responsive" src="/public/images/wrappedlogo.png">
         </div>
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
