updated css filepaths

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/public/pure-layout-marketing/css/layouts/marketing.css">"
+    <link rel="stylesheet" href="/public/css/marketing.css">"
 
 </head>
 
