--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/public/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/public/pure-layout-marketing/css/layouts/marketing.css">
+    <link rel="stylesheet" href="/public/css/marketing.css">"
     
 </head>
 
@@ -24,7 +24,7 @@
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Sign Up</a></li>
+                <li class="pure-menu-item"><a href="/index.html" class="pure-menu-link">Sign Up</a></li>
             </ul>
         </div>
     </div>
