index links to main

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <img width="200" alt="Shelf Chef Icon Name" class="pure-img-responsive" src="/public/images/Asset.png">
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li>
+                <!-- <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li> -->
             </ul>
         </div>
     </div>
