--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
                             <label for="password">Your Password</label>
                             <input id="password" type="password" placeholder="Your Password">
 
-                            <a href=#login>
+                            <a href="/main.html" class="pure-button pure-button-primary">Login</a>
+                            <!-- <a href=#login>
                                 <button id="login" type="submit" class="pure-button">Login</button>
-                            </a>
+                            </a> -->
                             or
                             <button id="create" type="submit" class="pure-button">Create an account</button>
                         </fieldset>
