--- a/main.html
+++ b/main.html
@@ -47,9 +47,13 @@
                     <label for="search">Search Recipes</label>
                     <input id="search" type="text" placeholder="Search Recipes">
 
-                    <button type="search" class="pure-button">Search Recipes</button>
+                    <button type="search" id="go" class="pure-button">Search Recipes</button>
                 </fieldset>
             </form>
+            <div id = "recipeSearchResults"></div>
+    <!-- <button class="btn btn-info expandButton" type="button" data-toggle="collapse" data-target="#recipeList" aria-expanded="false" aria-controls="recipeList">
+            My Recipes
+    </button> -->
         </div>
     </div>
 
@@ -57,16 +61,18 @@
         ShelfChef
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script> -->
     <!-- Copied from kitchen.html
      -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-    <script src="assets/app.js"></script>
-    <script src="assets/html5sortable.js"></script>
+    <!-- <script src="/public/js/app.js"></script>
+    <script src="/logic.js"></script> -->
+    <!-- <script src="assets/html5sortable.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/login.js"></script>
-    <script src="assets/jquery-ui.js"></script>
+    <script type="text/javascript" src="/public/js/app.js"></script>
+    <script type="text/javascript" src="/logic.js"></script>
+    <!-- <script src="assets/jquery-ui.js"></script> -->
 
 </body>
