--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <img width="200" alt="ShelfChef" class="pure-img-responsive" src="/public/images/Asset.png" ul class="pure-menu-list">
+            <img width="200" alt="ShelfChef" class="pure-img-responsive" src="/public/images/Asset.png">
+            <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="/index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="#login" class="pure-menu-link">Login</a></li>
             </ul>
